Fix HTML structure for email verification page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <h1>Your email has been verified 🎉</h1>
-    <p>You may now return to the app and log in.</p>
+    <p>You may now return and log in.</p>
   </body>
 </html>
+
